# AIChatBrowser-v3

./: .gitignore  .replit  CHANGELOG.md  CLEANUP-NOW.bat  COPY-INSTRUCTIONS.md  CROSS-PLATFORM-GUIDE.md  DEPLOY-NOW.bat  DEPLOYMENT-GUIDE.md  FINAL-SUMMARY.md  GITHUB_RELEASE_GUIDE.md  MAC_BUILD_GUIDE.md  PLATFORM_OVERVIEW.md  README-QUICK-START.md  README.md  V3-FEATURE-UPDATE-SUMMARY.md  V3-FINAL-COMPLETION-REPORT.md  build-all-platforms.js  build-extensions.js  build-linux.js  build-mac.js  build-tauri.js  check-v31.js  copy-v31-files.bat  create-installer.ps1  create-zip.bat  deploy-advanced.ps1  electron-builder.json  electron-builder.yml  electron-main.js  extract-and-copy-v31.bat  integration-helper.js  integration-plan.md  optimize-project.ps1  package-installer.bat  package-lock.json  package.json  preload.js  quick-v31-setup.ps1  release-manager.js  replit.md  (+15 more)
android-webview/: ANDROID_STUDIO_GUIDE.md  AndroidManifest.xml  MainActivity.java  README.md  activity_main.xml  build-android.bat  build-android.sh  build.gradle  quick_setup.bat  strings.xml  styles.xml
attached_assets/: Ai-styrt Nettleser For Windows – Konsept Og Arkitektur (mvp → V1) (1)_1756859501130.docx  Mad Easy Ai Browser V2 (5)_1756969659077.docx  Pasted--MadEasy-AI-Browser-V3-00-Vibecoding-Platform-Ecosystem-Scope-Bygg-en-innebygd-selvstend-1756969424040_1756969424045.txt  Pasted-Her-er-en-konsis-men-grundig-funksjons-og-konsekvensanalyse-av-Genspark-AI-Browser-med-hoved-1757692109296_1757692109297.txt  (+1 more)
electron/: main.js  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+267 files in other folders)
