[package]
name = "madeasy-browser"
version = "3.0.0"
description = "MadEasy Browser - AI-Powered Autonomous Web Browser"
authors = ["MadEasy Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "fs-all", "window-all", "dialog-all", "clipboard-all", "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]